--- a/package.json
+++ b/package.json
@@ -9,17 +9,12 @@
     "@vaadin/app-layout": "22.0.0",
     "@vaadin/avatar": "22.0.0",
     "@vaadin/avatar-group": "22.0.0",
-    "@vaadin/board": "22.0.0",
     "@vaadin/button": "22.0.0",
-    "@vaadin/charts": "22.0.0",
     "@vaadin/checkbox": "22.0.0",
     "@vaadin/checkbox-group": "22.0.0",
     "@vaadin/combo-box": "22.0.0",
     "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/confirm-dialog": "22.0.0",
     "@vaadin/context-menu": "22.0.0",
-    "@vaadin/cookie-consent": "22.0.0",
-    "@vaadin/crud": "22.0.0",
     "@vaadin/custom-field": "22.0.0",
     "@vaadin/date-picker": "22.0.0",
     "@vaadin/date-time-picker": "22.0.0",
@@ -31,7 +26,6 @@
     "@vaadin/form-layout": "22.0.0",
     "@vaadin/fusion-frontend": "0.0.15",
     "@vaadin/grid": "22.0.0",
-    "@vaadin/grid-pro": "22.0.0",
     "@vaadin/horizontal-layout": "22.0.0",
     "@vaadin/icon": "22.0.0",
     "@vaadin/icons": "22.0.0",
@@ -48,7 +42,6 @@
     "@vaadin/polymer-legacy-adapter": "22.0.0",
     "@vaadin/progress-bar": "22.0.0",
     "@vaadin/radio-group": "22.0.0",
-    "@vaadin/rich-text-editor": "22.0.0",
     "@vaadin/router": "1.7.4",
     "@vaadin/scroller": "22.0.0",
     "@vaadin/select": "22.0.0",
@@ -61,16 +54,11 @@
     "@vaadin/vaadin-accordion": "22.0.0",
     "@vaadin/vaadin-app-layout": "22.0.0",
     "@vaadin/vaadin-avatar": "22.0.0",
-    "@vaadin/vaadin-board": "22.0.0",
     "@vaadin/vaadin-button": "22.0.0",
-    "@vaadin/vaadin-charts": "22.0.0",
     "@vaadin/vaadin-checkbox": "22.0.0",
     "@vaadin/vaadin-combo-box": "22.0.0",
-    "@vaadin/vaadin-confirm-dialog": "22.0.0",
     "@vaadin/vaadin-context-menu": "22.0.0",
-    "@vaadin/vaadin-cookie-consent": "22.0.0",
     "@vaadin/vaadin-core-shrinkwrap": "22.0.0",
-    "@vaadin/vaadin-crud": "22.0.0",
     "@vaadin/vaadin-custom-field": "22.0.0",
     "@vaadin/vaadin-date-picker": "22.0.0",
     "@vaadin/vaadin-date-time-picker": "22.0.0",
@@ -78,7 +66,6 @@
     "@vaadin/vaadin-dialog": "22.0.0",
     "@vaadin/vaadin-form-layout": "22.0.0",
     "@vaadin/vaadin-grid": "22.0.0",
-    "@vaadin/vaadin-grid-pro": "22.0.0",
     "@vaadin/vaadin-icon": "22.0.0",
     "@vaadin/vaadin-icons": "22.0.0",
     "@vaadin/vaadin-item": "22.0.0",
@@ -92,9 +79,7 @@
     "@vaadin/vaadin-ordered-layout": "22.0.0",
     "@vaadin/vaadin-progress-bar": "22.0.0",
     "@vaadin/vaadin-radio-button": "22.0.0",
-    "@vaadin/vaadin-rich-text-editor": "22.0.0",
     "@vaadin/vaadin-select": "22.0.0",
-    "@vaadin/vaadin-shrinkwrap": "22.0.0",
     "@vaadin/vaadin-split-layout": "22.0.0",
     "@vaadin/vaadin-tabs": "22.0.0",
     "@vaadin/vaadin-text-field": "22.0.0",
@@ -106,6 +91,7 @@
     "@vaadin/virtual-list": "22.0.0",
     "construct-style-sheets-polyfill": "3.0.4",
     "date-fns": "2.23.0",
+    "line-awesome": "1.3.0",
     "lit": "2.0.0"
   },
   "devDependencies": {
@@ -143,17 +129,12 @@
       "@vaadin/app-layout": "22.0.0",
       "@vaadin/avatar": "22.0.0",
       "@vaadin/avatar-group": "22.0.0",
-      "@vaadin/board": "22.0.0",
       "@vaadin/button": "22.0.0",
-      "@vaadin/charts": "22.0.0",
       "@vaadin/checkbox": "22.0.0",
       "@vaadin/checkbox-group": "22.0.0",
       "@vaadin/combo-box": "22.0.0",
       "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/confirm-dialog": "22.0.0",
       "@vaadin/context-menu": "22.0.0",
-      "@vaadin/cookie-consent": "22.0.0",
-      "@vaadin/crud": "22.0.0",
       "@vaadin/custom-field": "22.0.0",
       "@vaadin/date-picker": "22.0.0",
       "@vaadin/date-time-picker": "22.0.0",
@@ -164,7 +145,6 @@
       "@vaadin/form-layout": "22.0.0",
       "@vaadin/fusion-frontend": "0.0.15",
       "@vaadin/grid": "22.0.0",
-      "@vaadin/grid-pro": "22.0.0",
       "@vaadin/horizontal-layout": "22.0.0",
       "@vaadin/icon": "22.0.0",
       "@vaadin/icons": "22.0.0",
@@ -181,7 +161,6 @@
       "@vaadin/polymer-legacy-adapter": "22.0.0",
       "@vaadin/progress-bar": "22.0.0",
       "@vaadin/radio-group": "22.0.0",
-      "@vaadin/rich-text-editor": "22.0.0",
       "@vaadin/router": "1.7.4",
       "@vaadin/scroller": "22.0.0",
       "@vaadin/select": "22.0.0",
@@ -194,16 +173,11 @@
       "@vaadin/vaadin-accordion": "22.0.0",
       "@vaadin/vaadin-app-layout": "22.0.0",
       "@vaadin/vaadin-avatar": "22.0.0",
-      "@vaadin/vaadin-board": "22.0.0",
       "@vaadin/vaadin-button": "22.0.0",
-      "@vaadin/vaadin-charts": "22.0.0",
       "@vaadin/vaadin-checkbox": "22.0.0",
       "@vaadin/vaadin-combo-box": "22.0.0",
-      "@vaadin/vaadin-confirm-dialog": "22.0.0",
       "@vaadin/vaadin-context-menu": "22.0.0",
-      "@vaadin/vaadin-cookie-consent": "22.0.0",
       "@vaadin/vaadin-core-shrinkwrap": "22.0.0",
-      "@vaadin/vaadin-crud": "22.0.0",
       "@vaadin/vaadin-custom-field": "22.0.0",
       "@vaadin/vaadin-date-picker": "22.0.0",
       "@vaadin/vaadin-date-time-picker": "22.0.0",
@@ -211,7 +185,6 @@
       "@vaadin/vaadin-dialog": "22.0.0",
       "@vaadin/vaadin-form-layout": "22.0.0",
       "@vaadin/vaadin-grid": "22.0.0",
-      "@vaadin/vaadin-grid-pro": "22.0.0",
       "@vaadin/vaadin-icon": "22.0.0",
       "@vaadin/vaadin-icons": "22.0.0",
       "@vaadin/vaadin-item": "22.0.0",
@@ -225,9 +198,7 @@
       "@vaadin/vaadin-ordered-layout": "22.0.0",
       "@vaadin/vaadin-progress-bar": "22.0.0",
       "@vaadin/vaadin-radio-button": "22.0.0",
-      "@vaadin/vaadin-rich-text-editor": "22.0.0",
       "@vaadin/vaadin-select": "22.0.0",
-      "@vaadin/vaadin-shrinkwrap": "22.0.0",
       "@vaadin/vaadin-split-layout": "22.0.0",
       "@vaadin/vaadin-tabs": "22.0.0",
       "@vaadin/vaadin-text-field": "22.0.0",
@@ -239,6 +210,7 @@
       "@vaadin/virtual-list": "22.0.0",
       "construct-style-sheets-polyfill": "3.0.4",
       "date-fns": "2.23.0",
+      "line-awesome": "1.3.0",
       "lit": "2.0.0"
     },
     "devDependencies": {
@@ -263,6 +235,6 @@
       "workbox-precaching": "6.2.0",
       "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "27acd7a5a5edb4a597467d8c29ac25e742a3dd7873625ff2c8d79df74e8595e1"
+    "hash": "b90ef89d7e0b0a782f9734e7ff6ffc902aa7a03016c5135d620804386d389a0e"
   }
 }
