Add Books CRUD + Favourite Books

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@vaadin/app-layout": "22.0.0",
     "@vaadin/avatar": "22.0.0",
     "@vaadin/avatar-group": "22.0.0",
+    "@vaadin/board": "22.0.0",
     "@vaadin/button": "22.0.0",
+    "@vaadin/charts": "22.0.0",
     "@vaadin/checkbox": "22.0.0",
     "@vaadin/checkbox-group": "22.0.0",
     "@vaadin/combo-box": "22.0.0",
     "@vaadin/common-frontend": "0.0.17",
+    "@vaadin/confirm-dialog": "22.0.0",
     "@vaadin/context-menu": "22.0.0",
+    "@vaadin/cookie-consent": "22.0.0",
+    "@vaadin/crud": "22.0.0",
     "@vaadin/custom-field": "22.0.0",
     "@vaadin/date-picker": "22.0.0",
     "@vaadin/date-time-picker": "22.0.0",
@@ -26,6 +31,7 @@
     "@vaadin/form-layout": "22.0.0",
     "@vaadin/fusion-frontend": "0.0.15",
     "@vaadin/grid": "22.0.0",
+    "@vaadin/grid-pro": "22.0.0",
     "@vaadin/horizontal-layout": "22.0.0",
     "@vaadin/icon": "22.0.0",
     "@vaadin/icons": "22.0.0",
@@ -42,6 +48,7 @@
     "@vaadin/polymer-legacy-adapter": "22.0.0",
     "@vaadin/progress-bar": "22.0.0",
     "@vaadin/radio-group": "22.0.0",
+    "@vaadin/rich-text-editor": "22.0.0",
     "@vaadin/router": "1.7.4",
     "@vaadin/scroller": "22.0.0",
     "@vaadin/select": "22.0.0",
@@ -54,11 +61,16 @@
     "@vaadin/vaadin-accordion": "22.0.0",
     "@vaadin/vaadin-app-layout": "22.0.0",
     "@vaadin/vaadin-avatar": "22.0.0",
+    "@vaadin/vaadin-board": "22.0.0",
     "@vaadin/vaadin-button": "22.0.0",
+    "@vaadin/vaadin-charts": "22.0.0",
     "@vaadin/vaadin-checkbox": "22.0.0",
     "@vaadin/vaadin-combo-box": "22.0.0",
+    "@vaadin/vaadin-confirm-dialog": "22.0.0",
     "@vaadin/vaadin-context-menu": "22.0.0",
+    "@vaadin/vaadin-cookie-consent": "22.0.0",
     "@vaadin/vaadin-core-shrinkwrap": "22.0.0",
+    "@vaadin/vaadin-crud": "22.0.0",
     "@vaadin/vaadin-custom-field": "22.0.0",
     "@vaadin/vaadin-date-picker": "22.0.0",
     "@vaadin/vaadin-date-time-picker": "22.0.0",
@@ -66,6 +78,7 @@
     "@vaadin/vaadin-dialog": "22.0.0",
     "@vaadin/vaadin-form-layout": "22.0.0",
     "@vaadin/vaadin-grid": "22.0.0",
+    "@vaadin/vaadin-grid-pro": "22.0.0",
     "@vaadin/vaadin-icon": "22.0.0",
     "@vaadin/vaadin-icons": "22.0.0",
     "@vaadin/vaadin-item": "22.0.0",
@@ -79,7 +92,9 @@
     "@vaadin/vaadin-ordered-layout": "22.0.0",
     "@vaadin/vaadin-progress-bar": "22.0.0",
     "@vaadin/vaadin-radio-button": "22.0.0",
+    "@vaadin/vaadin-rich-text-editor": "22.0.0",
     "@vaadin/vaadin-select": "22.0.0",
+    "@vaadin/vaadin-shrinkwrap": "22.0.0",
     "@vaadin/vaadin-split-layout": "22.0.0",
     "@vaadin/vaadin-tabs": "22.0.0",
     "@vaadin/vaadin-text-field": "22.0.0",
@@ -129,12 +144,17 @@
       "@vaadin/app-layout": "22.0.0",
       "@vaadin/avatar": "22.0.0",
       "@vaadin/avatar-group": "22.0.0",
+      "@vaadin/board": "22.0.0",
       "@vaadin/button": "22.0.0",
+      "@vaadin/charts": "22.0.0",
       "@vaadin/checkbox": "22.0.0",
       "@vaadin/checkbox-group": "22.0.0",
       "@vaadin/combo-box": "22.0.0",
       "@vaadin/common-frontend": "0.0.17",
+      "@vaadin/confirm-dialog": "22.0.0",
       "@vaadin/context-menu": "22.0.0",
+      "@vaadin/cookie-consent": "22.0.0",
+      "@vaadin/crud": "22.0.0",
       "@vaadin/custom-field": "22.0.0",
       "@vaadin/date-picker": "22.0.0",
       "@vaadin/date-time-picker": "22.0.0",
@@ -145,6 +165,7 @@
       "@vaadin/form-layout": "22.0.0",
       "@vaadin/fusion-frontend": "0.0.15",
       "@vaadin/grid": "22.0.0",
+      "@vaadin/grid-pro": "22.0.0",
       "@vaadin/horizontal-layout": "22.0.0",
       "@vaadin/icon": "22.0.0",
       "@vaadin/icons": "22.0.0",
@@ -161,6 +182,7 @@
       "@vaadin/polymer-legacy-adapter": "22.0.0",
       "@vaadin/progress-bar": "22.0.0",
       "@vaadin/radio-group": "22.0.0",
+      "@vaadin/rich-text-editor": "22.0.0",
       "@vaadin/router": "1.7.4",
       "@vaadin/scroller": "22.0.0",
       "@vaadin/select": "22.0.0",
@@ -173,11 +195,16 @@
       "@vaadin/vaadin-accordion": "22.0.0",
       "@vaadin/vaadin-app-layout": "22.0.0",
       "@vaadin/vaadin-avatar": "22.0.0",
+      "@vaadin/vaadin-board": "22.0.0",
       "@vaadin/vaadin-button": "22.0.0",
+      "@vaadin/vaadin-charts": "22.0.0",
       "@vaadin/vaadin-checkbox": "22.0.0",
       "@vaadin/vaadin-combo-box": "22.0.0",
+      "@vaadin/vaadin-confirm-dialog": "22.0.0",
       "@vaadin/vaadin-context-menu": "22.0.0",
+      "@vaadin/vaadin-cookie-consent": "22.0.0",
       "@vaadin/vaadin-core-shrinkwrap": "22.0.0",
+      "@vaadin/vaadin-crud": "22.0.0",
       "@vaadin/vaadin-custom-field": "22.0.0",
       "@vaadin/vaadin-date-picker": "22.0.0",
       "@vaadin/vaadin-date-time-picker": "22.0.0",
@@ -185,6 +212,7 @@
       "@vaadin/vaadin-dialog": "22.0.0",
       "@vaadin/vaadin-form-layout": "22.0.0",
       "@vaadin/vaadin-grid": "22.0.0",
+      "@vaadin/vaadin-grid-pro": "22.0.0",
       "@vaadin/vaadin-icon": "22.0.0",
       "@vaadin/vaadin-icons": "22.0.0",
       "@vaadin/vaadin-item": "22.0.0",
@@ -198,7 +226,9 @@
       "@vaadin/vaadin-ordered-layout": "22.0.0",
       "@vaadin/vaadin-progress-bar": "22.0.0",
       "@vaadin/vaadin-radio-button": "22.0.0",
+      "@vaadin/vaadin-rich-text-editor": "22.0.0",
       "@vaadin/vaadin-select": "22.0.0",
+      "@vaadin/vaadin-shrinkwrap": "22.0.0",
       "@vaadin/vaadin-split-layout": "22.0.0",
       "@vaadin/vaadin-tabs": "22.0.0",
       "@vaadin/vaadin-text-field": "22.0.0",
@@ -235,6 +265,6 @@
       "workbox-precaching": "6.2.0",
       "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "b90ef89d7e0b0a782f9734e7ff6ffc902aa7a03016c5135d620804386d389a0e"
+    "hash": "f01ea21d308b0b513f9e617a89f20b5daed3307ddf3346d4f2416942bc824afb"
   }
 }
